fix(patterns/breadcrumb): adjust breadcrumb behavior on smaller breakpoints (#701)

--- a/packages/styles/components/_c.breadcrumb.scss
+++ b/packages/styles/components/_c.breadcrumb.scss
@@ -58,10 +58,13 @@
     @include set-font-scale('04', 'l');
 
     padding-right: $mu050;
-    background-position: left center;
+    background-position: left ($mu025 - 0.0625rem);
     background-repeat: no-repeat;
     background-size: $mu100;
-    flex-shrink: 0;
+
+    @include set-from-screen('l') {
+      flex-shrink: 0;
+    }
 
     &.is-active,
     &:only-child,
